--- a/src/components/Expenses/ExpenseItem/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem/ExpenseItem.css
@@ -6,7 +6,7 @@
   padding: 0.5rem;
   margin: 1rem 0;
   border-radius: 12px;
-  background-color: #4b4b4b;
+  background-color: #0d3b66;
 }
 
 .expense-item__description {
@@ -20,7 +20,7 @@
 }
 
 .expense-item h2 {
-  color: #3a3a3a;
+  color: #092a48;
   font-size: 1rem;
   flex: 1;
   margin: 0 1rem;
@@ -29,10 +29,9 @@
 
 .expense-item__price {
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: 300;
   color: white;
-  background-color: #40005d;
-  border: 1px solid white;
+  background-color: #5edc1f;
   padding: 0.5rem;
   border-radius: 12px;
 }
