--- a/src/components/Chart/ChartBar/ChartBar.module.css
+++ b/src/components/Chart/ChartBar/ChartBar.module.css
@@ -1,30 +1,32 @@
-.chart-bar {
+.chartBar {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.chart-bar__inner {
+.inner {
   height: 100%;
-  width: 100%;
-  border: 1px solid #313131;
-  border-radius: 12px;
-  background-color: #c3b4f3;
+  width: 1.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: white;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
-.chart-bar__fill {
-  background-color: #4826b9;
+.fill {
+  background-color: #092a48;
   width: 100%;
   transition: all 0.3s ease-out;
 }
 
-.chart-bar__label {
+.label {
   font-weight: bold;
-  font-size: 0.5rem;
+  font-size: 0.6rem;
   text-align: center;
+  color: white;
+  margin-top: 0.2rem;
 }
