--- a/src/components/Expenses/ExpenseItem/ExpenseItemDate/ExpenseItemDate.css
+++ b/src/components/Expenses/ExpenseItem/ExpenseItemDate/ExpenseItemDate.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   width: 5.5rem;
   height: 5.5rem;
-  border: 1px solid #ececec;
-  background-color: #2a2a2a;
+  background-color: #0d3b66;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+
   color: white;
   border-radius: 12px;
   align-items: center;
