--- a/src/components/Expenses/Expenses.module.css
+++ b/src/components/Expenses/Expenses.module.css
@@ -1,10 +1,14 @@
-.new-expense {
-  background-color: #a892ee;
+.expenses {
   padding: 1rem;
+  background-color: #092a48;
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
   border-radius: 12px;
-  text-align: center;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+}
+
+.expenses__fallback {
+  color: white;
+  text-align: center;
 }
