--- a/src/components/NewExpense/ExpenseForm/ExpenseForm.module.css
+++ b/src/components/NewExpense/ExpenseForm/ExpenseForm.module.css
@@ -1,4 +1,4 @@
-.new-expense__controls {
+.newExpense {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
@@ -6,21 +6,22 @@
   text-align: left;
 }
 
-.new-expense__control label {
+.control label {
   font-weight: bold;
   margin-bottom: 0.5rem;
   display: block;
+  color: white;
 }
 
-.new-expense__control input {
+.control input {
   font: inherit;
   padding: 0.5rem;
   border-radius: 6px;
-  border: 1px solid #ccc;
   width: 20rem;
   max-width: 100%;
+  border: none;
 }
 
-.new-expense__actions {
+.actions {
   text-align: right;
 }
