--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'montserrat', sans-serif;
+  height: 100vh;
 }
 
 body {
   margin: 0;
-  background-color: #3f3f3f;
+  background-color: #0d3b66;
+  background-image: linear-gradient(
+    to right bottom,
+    #092a48,
+    #0a2e4f,
+    #0b3257,
+    #0c375e,
+    #0d3b66
+  );
 }
 
+.title {
+  color: white;
+  font-weight: 100;
+  font-size: 2.6rem;
+  letter-spacing: 0.3rem;
+  margin: 0;
+  padding: 1rem 2rem;
+}
