--- a/src/components/Chart/ChartBar/ChartBar.module.css
+++ b/src/components/Chart/ChartBar/ChartBar.module.css
@@ -10,7 +10,7 @@
   width: 1.5rem;
   border: none;
   border-radius: 0.5rem;
-  background-color: white;
+  background-color: #f8f4e3;
   overflow: hidden;
   display: flex;
   flex-direction: column;
