--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,7 +1,7 @@
 .chart {
   padding: 1rem;
   border-radius: 12px;
-  background-color: #466572;
+  background-color: #0d3b66;
   text-align: center;
   display: flex;
   justify-content: space-around;
