--- a/src/components/Expenses/ExpenseItem/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem/ExpenseItem.css
@@ -6,7 +6,7 @@
   padding: 0.5rem;
   margin: 1rem 0;
   border-radius: 12px;
-  background-color: #0d3b66;
+  background-color: #466572;
 }
 
 .expense-item__description {
@@ -31,7 +31,7 @@
   font-size: 1rem;
   font-weight: 300;
   color: white;
-  background-color: #5edc1f;
+  background-color: #e74c3c;
   padding: 0.5rem;
   border-radius: 12px;
 }
