--- a/src/components/Expenses/Expenses.module.css
+++ b/src/components/Expenses/Expenses.module.css
@@ -8,7 +8,8 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
-.expenses__fallback {
+.fallback {
   color: white;
   text-align: center;
+  margin-top: 2rem;
 }
