--- a/src/components/NewExpense/ExpenseForm/ExpenseForm.module.css
+++ b/src/components/NewExpense/ExpenseForm/ExpenseForm.module.css
@@ -20,6 +20,13 @@
   width: 20rem;
   max-width: 100%;
   border: none;
+  background-color: #466572;
+  color: white;
+}
+
+.control input::placeholder {
+  background-color: #466572;
+  color: rgba(255, 255, 255, 0.425);
 }
 
 .actions {
