--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -2,12 +2,21 @@
   font: inherit;
   cursor: pointer;
   padding: 0.5rem 1rem;
-  background-color: white;
-  color: black;
+  background-color: #466572;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  color: white;
   border-radius: 1rem;
   border: none;
 }
 
 .sideButton {
   margin-right: 1rem;
+}
+
+.add {
+  background-color: #28b463;
+}
+
+.del {
+  background-color: #e74c3c;
 }
