--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -18,7 +18,16 @@
   height: fit-content;
   z-index: 100;
   overflow: hidden;
-  background-color: white;
+  background-color: #466572;
+  color: white;
   border-radius: 1.2rem;
   text-align: center;
+}
+
+.modal h2 {
+  margin-bottom: 2rem;
+}
+
+.modal p {
+  margin-bottom: 2rem;
 }
