--- a/src/containers/ExInData/ExInItem/ExInItem.module.css
+++ b/src/containers/ExInData/ExInItem/ExInItem.module.css
@@ -1,4 +1,4 @@
-.expense-item {
+.expenseItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,7 +9,7 @@
   background-color: #466572;
 }
 
-.expense-item__description {
+.description {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -19,7 +19,7 @@
   flex: 1;
 }
 
-.expense-item h2 {
+.expenseItem h2 {
   color: #092a48;
   font-size: 1rem;
   flex: 1;
@@ -27,7 +27,7 @@
   color: white;
 }
 
-.expense-item__price {
+.price {
   font-size: 1rem;
   font-weight: 300;
   color: white;
@@ -37,18 +37,18 @@
 }
 
 @media (min-width: 580px) {
-  .expense-item__description {
+  .description {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     flex: 1;
   }
 
-  .expense-item__description h2 {
+  .description h2 {
     font-size: 1.25rem;
   }
 
-  .expense-item__price {
+  .price {
     font-size: 1.25rem;
     padding: 0.5rem 1.5rem;
   }
