--- a/src/containers/Data/DataFilter/DataFilter.module.css
+++ b/src/containers/Data/DataFilter/DataFilter.module.css
@@ -3,28 +3,12 @@
   padding: 0 1rem;
 }
 
-.filters {
-  font-weight: 100;
-  width: 100%;
-  align-items: center;
-  margin: 1rem 0;
-
+.filterButton {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
-select {
-  background-color: #466572;
-  color: white;
-  border: none;
-
-  font: inherit;
-  padding: 0.2rem 0.5rem;
-  font-weight: 500;
-  border-radius: 6px;
-}
-
-label {
-  font-weight: 300;
-  margin-right: 0.5rem;
+.xButton {
+  display: flex;
+  justify-content: flex-end;
 }
