--- a/src/components/UI/ErrorModal/ErrorModal.module.css
+++ b/src/components/UI/ErrorModal/ErrorModal.module.css
@@ -1,4 +1,4 @@
-.modalContainer {
+.modal {
   padding: 2rem;
   position: fixed;
   top: 50%;
@@ -7,8 +7,17 @@
   width: fit-content;
   height: fit-content;
   z-index: 100;
+  overflow: hidden;
   background-color: #466572;
   color: white;
   border-radius: 1.2rem;
   text-align: center;
+}
+
+.modal h2 {
+  margin-bottom: 2rem;
+}
+
+.modal p {
+  margin-bottom: 2rem;
 }
